test/testcases/malgo/error/ErrorInvalidIdent.mlg
def let = {x f -> f x}
